# OTLP_rust

./: .clippy.toml  .cspell-project-words.txt  .editorconfig  .gitignore  .markdownlint.json  100_PERCENT_ACHIEVEMENT_2025_10_04.md  100_PERCENT_COMPLETE.md  100_PERCENT_COMPLETE_FINAL.md  100_PERCENT_COMPLETE_REPORT_2026_03_17.md  100_PERCENT_COMPLETION_ROADMAP.md  100_PERCENT_COMPLETION_STATUS.md  ACTIONABLE_TASKS_2026_ROADMAP.md  AFTERNOON_PROGRESS_2025_10_04.md  ALIGNMENT_PROGRESS_REPORT.md  ARCHITECTURE_REFACTORING_COMPLETE_88.md  ARCHITECTURE_REFACTORING_COMPLETE_FINAL.md  ARCHITECTURE_REFACTORING_COMPLETE_FINAL_SUMMARY.md  ARCHITECTURE_REFACTORING_COMPLETE_STATUS.md  ARCHITECTURE_REFACTORING_COMPLETE_STATUS_FINAL.md  ARCHITECTURE_REFACTORING_COMPLETION.md  ARCHITECTURE_REFACTORING_FINAL.md  ARCHITECTURE_REFACTORING_FINAL_REPORT.md  ARCHITECTURE_REFACTORING_FINAL_STATUS.md  ARCHITECTURE_REFACTORING_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE_REFACTORING_NEXT_STEPS.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTORING_PROGRESS.md  ARCHITECTURE_REFACTORING_SUCCESS.md  ARCHITECTURE_REFACTORING_SUCCESS_COMPLETE.md  ARCHITECTURE_REFACTORING_SUCCESS_FINAL.md  ARCHITECTURE_REFACTORING_SUMMARY_FINAL.md  ARCHIVE_COMPLETE_2025_10_28.md  ARCHIVE_COMPLETE_2025_10_29.md  BATCH_TASK_COMPLETION_REPORT.md  BENCHMARK_COMPARISON_REPORT.md  CARGO_UPDATE_VERIFICATION_2025.md  CHANGELOG.md  CHANGELOG_v0.6.0.md  CLEANUP_EXECUTION_SUMMARY_2025_10_26.md  CODE_QUALITY_IMPROVEMENT_REPORT.md  (+395 more)
crates/otlp/: API_REFERENCE.md  BENCHMARK_RESULTS_ANALYSIS.md  BENCHMARK_SUITE_COMPLETION_SUMMARY.md  CODE_FIXES_SUMMARY_2025_01_10.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_INTEGRATION_OVERVIEW.md  COMPREHENSIVE_TESTING_STRATEGY.md  CONTINUOUS_IMPROVEMENT_PLAN.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPERATIONS_OPTIMIZATION.md  DOCUMENTATION_ENHANCEMENT_PLAN.md  Dockerfile  Dockerfile.ci  FINAL_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_BASELINE_ANALYSIS_2025_01_10.md  PERFORMANCE_BENCHMARK_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE_2025_01_10.md  PROJECT_PROGRESS_ROADMAP_2025_10_08.md  QUICKSTART.md  QUICK_OPTIMIZATIONS_GUIDE.md  README.md  THEORY_TO_PRACTICE_GUIDE.md  build.rs  test_standalone.rs
otlp/: BENCHMARK_SUITE_COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_INTEGRATION_OVERVIEW.md  COMPREHENSIVE_PROJECT_COMPLETION_REPORT.md  CORE_IMPLEMENTATION_PLAN.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.optimized  DEPLOYMENT_OPERATIONS_OPTIMIZATION.md  ERROR_HANDLING_INTEGRATION_REPORT.md  FORMAL_VERIFICATION_ANALYSIS.md  MULTI_TASK_EXECUTION_GUIDE.md  OTLP_RUST_全面Bug修复完成报告.md  OTLP_RUST_多任务推进完成报告.md  OTLP_RUST_错误处理增强实施进度报告.md  OTLP_RUST_错误异常检测标准方案对比分析报告.md  PERFORMANCE_BASELINE_ANALYSIS_2025_01_10.md  PERFORMANCE_BENCHMARK_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE_2025_01_10.md  PROJECT_COMPLETION_SUMMARY_2025.md  PROJECT_FINAL_STATUS_SUMMARY.md  PROJECT_PROGRESS_TRACKER.md  QUICK_OPTIMIZATIONS_GUIDE.md  README.md  TESTING_STRATEGY_PLAN.md  TODAY_PROGRESS_SUMMARY_2025_10_08.md  libsimd_optimizations.rlib  performance_demo_standalone.rs  run_tests.sh  simple_test_standalone.rs
otlp/benches/: advanced_performance_benchmarks.rs  comprehensive_benchmarks.rs  extended_simd_benchmarks.rs  memory_pool_benchmarks.rs  network_io_benchmarks.rs  optimization_benchmarks.rs  otlp_benchmarks.rs  performance_benchmarks.rs  resilience_benchmarks.rs  simple_benchmarks.rs
otlp/config/: production.toml
otlp/docs/: API_REFERENCE.md  ARCHITECTURE_DESIGN.md  COMMUNITY_GUIDE.md  COMPREHENSIVE_INTEGRATION_OVERVIEW.md  COMPREHENSIVE_USER_GUIDE.md  CONTINUOUS_IMPROVEMENT_SUMMARY_2025_10_18.md  CORE_IMPLEMENTATION_PLAN.md  DEPENDENCY_CLEANUP_PLAN.md  DOCUMENTATION_STANDARDS.md  ERROR_HANDLING_RESILIENCE_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_DOCS_COMPLETION_REPORT_2025_10_17.md  FINAL_PROJECT_SUMMARY_2025.md  OTLP_2025_COMPREHENSIVE_DOCUMENTATION_INDEX.md  OTLP_ALIGNMENT_GUIDE.md  OTLP_K8S_ISTIO_ENVOY_GUIDE.md  OTLP_RUST_API_使用指南.md  OTLP_RUST_API_文档.md  OTLP_RUST_API参考文档.md  OTLP_RUST_Bug修复完成报告.md  OTLP_RUST_INDUSTRY_COMPARISON_ANALYSIS.md  OTLP_RUST_快速推进完成总结.md  OTLP_RUST_性能基准测试报告.md  OTLP_RUST_故障排查和性能调优指南.md  OTLP_RUST_文档索引.md  OTLP_RUST_测试指南和最佳实践.md  OTLP_RUST_源代码梳理检查清单_2025.md  OTLP_RUST_示例代码集合.md  OTLP_RUST_迁移指南和版本升级说明.md  OTLP_RUST_项目推进完成总结报告.md  OTLP_RUST_项目推进状态报告.md  OTLP_RUST_项目最终完成总结报告.md  OTLP_多任务推进完成总结_2025.md  OTLP_安全与合规指南_2025.md  OTLP_性能优化和调优指南_2025.md  OTLP_持续改进执行计划_2025.md  OTLP_文档全面梳理分析报告_2025.md  OTLP_文档质量提升和标准化计划_2025.md  OTLP_生态系统集成指南_2025.md  OTLP_系统时间对齐完成报告_2025.md  (+11 more)
otlp/examples/: advanced_microservices_demo.rs  advanced_patterns.rs  async_tracing.rs  comprehensive_demo.rs  comprehensive_usage.rs  core_optimization_demo.rs  distributed_coordination_demo.rs  enhanced_monitoring_demo.rs  final_optimization_demo.rs  integrated_optimizations_demo.rs  microservices_demo.rs  ml_prediction_demo.rs  monitoring_demo.rs  nested_spans.rs  performance_benchmarks.rs  performance_demo.rs  performance_optimization_demo.rs  quick_optimizations_demo.rs  resilience_usage.rs  simple_demo.rs  simple_optimization_demo.rs  simple_usage.rs
otlp/k8s/: otlp-deployment.yaml  otlp-ingress.yaml
otlp/semantics/: 00_INDEX.md  04_SEMANTIC_CONVENTIONS_COMPLETE.md  05_IMPLEMENTATION_GUIDE_COMPLETE.md  ALERTING_BASELINE.md  DOCUMENTATION_COMPLETION_REPORT_2025_10_17.md  EBPF_PRACTICE_GUIDE.md  EVIDENCE_PLAN.md  FINAL_SUMMARY_2025_10_17.md  MEASUREMENT_GUIDE.md  OPAMP_DEPLOYMENT_GUIDE.md  OPAMP_ROLLOUT_STRATEGY.md  OTTL_COMPLETE_REFERENCE.md  OTTL_EXAMPLES.md  PERFORMANCE_OPTIMIZATION_MANUAL.md  PROFILES_INTEGRATION_GUIDE.md  PROFILING_INTEGRATION.md  PROJECT_MAPPING_MATRIX.md  QUICK_START_GUIDE.md  README.md  RESULTS_REPORT_TEMPLATE.md  RULES_GOVERNANCE.md  RUNBOOK.md  SCALING_STRATEGY.md  SEMANTICS_COMPLETION_REPORT_2025_10_17.md  SEMANTIC_MODEL.md
otlp/src/: advanced_features.rs  advanced_security.rs  client.rs  compliance_manager.rs  config.rs  data.rs  enterprise_features.rs  (+24 more)
(+3431 files in other folders)
