[package]
name = "otlp"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Rust OTLP Team"]
description = "OpenTelemetry Protocol (OTLP) implementation with Rust 1.90+ features"
license = "MIT OR Apache-2.0"
keywords = ["opentelemetry", "otlp", "observability", "telemetry", "async", "grpc"]
categories = ["development-tools::debugging", "network-programming", "asynchronous"]

[dependencies]
# OpenTelemetry核心依赖
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { workspace = true, optional = true }

# 异步运行时和网络
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# gRPC和HTTP客户端
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# 序列化和反序列化
serde = { workspace = true }
serde_json = { workspace = true }
prost-types = { workspace = true }

# 并发和同步
parking_lot = { workspace = true }
crossbeam = { workspace = true }
dashmap = "6.1"

# 压缩算法
flate2 = "1.0"
brotli = "8.0.2"
zstd = "0.13"
lz4_flex = "0.11"

# 异步trait
async-trait = { workspace = true, optional = true }

# 系统信息
num_cpus = { workspace = true }

# 随机数生成
rand = { workspace = true }

# 加密和哈希
sha2 = "0.10"

# 错误处理和日志
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 配置管理
config = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 其他常用库
uuid = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
hex = "0.4.3"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
warp = { version = "0.4.2", features = ["server"] }

[[bench]]
name = "performance_benchmarks"
harness = false


[[bench]]
name = "extended_simd_benchmarks"
harness = false

[features]
default = ["async", "grpc", "http"]
full = ["async", "grpc", "http", "monitoring"]

# 核心功能特性
async = ["tokio/full", "async-trait"]
grpc = ["tonic", "prost", "opentelemetry-proto", "opentelemetry-proto/gen-tonic"]
http = ["reqwest", "hyper"]

# 监控和可观测性特性
monitoring = []
